--- a/config/database.yml
+++ b/config/database.yml
@@ -79,11 +79,11 @@ test:
 #
 # You can use this database configuration with:
 #
-#   production:
-#     url: <%= ENV['DATABASE_URL'] %>
-#
-production:
-  <<: *default
-  database: product-register_2_production
-  username: product-register_2
-  password: <%= ENV['PRODUCT-REGISTER_2_DATABASE_PASSWORD'] %>
+  production:
+    url: <%= ENV['DATABASE_URL'] %>
+
+# production:
+#   <<: *default
+#   database: product-register_2_production
+#   username: product-register_2
+#   password: <%= ENV['PRODUCT-REGISTER_2_DATABASE_PASSWORD'] %>
